v68 audio from absolute url
v68 audio from absolute url

--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@ function auIntro() {
 	//iOS y Safari no reconocen .ogg
 	if(isiPhone > -1) {
 		//alert('iphone 22');
-		audioElement.setAttribute('src', 'audio/intro.mp3');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.mp3');
 		//audioElement.play();
 	}
 	else if(isiPod > -1) {
 		//alert('ipod');
-		audioElement.setAttribute('src', 'audio/intro.mp3');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.mp3');
 	}
 	else if(isiPad > -1) {
 		//alert('ipad');
-		audioElement.setAttribute('src', 'audio/intro.mp3');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.mp3');
 	}
 	else if(isSafari > -1) {
 		//alert('ipad');
-		audioElement.setAttribute('src', 'audio/intro.mp3');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.mp3');
 	}
 	else if (android > -1) {
 		//alert('android 16');
-		audioElement.setAttribute('src', 'audio/intro.ogg');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 	}
 	else {
-		audioElement.setAttribute('src', 'audio/intro.ogg');
+		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
