--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ function auIntro() {
 	}
 	else if (android > -1) {
 		//alert('android 16');
+		//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 	}
 	else {
@@ -218,7 +219,8 @@ $(document).ready(function() {
 	else if (android > -1) {
 		//alert('android 16');
 		//$("head").append('<meta name="viewport" content="width=1200px, target-densitydpi=device-dpi" />');
-		$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />');
+		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />');
+		$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi" />');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
