--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@ $(document).ready(function() {
 		//alert('android 16');
 		//$("head").append('<meta name="viewport" content="width=1200px, target-densitydpi=device-dpi" />');
 		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />');
-		$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi" />');
+		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi" />');
+		$("head").append('<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
