--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ window.addEventListener("orientationchange", function() {
 
 $(document).ready(function() {
 	
+	/*
 	// precarga
 	//eliminamos el scroll de la pagina
 	$("body").css({"overflow-y":"hidden"});
@@ -210,19 +211,19 @@ $(document).ready(function() {
 	$("#pre-load-web").css({height:alto+"px"});
 	//esta sera la capa que esta dento de la capa que muestra un gif
 	$("#imagen-load").css({"margin-top":(alto/2)-30+"px"});
-	// fin precarga
+	// fin precarga*/
 	
 	//define meta viewport scale
 	if(isiPhone > -1) {
 		//alert('iphone 24');
 		//auIntro();
-		$("head").append('<meta name="viewport" content="user-scalable=yes, initial-scale=0.490, maximum-scale=0.490" />');
+		//$("head").append('<meta name="viewport" content="user-scalable=yes, initial-scale=0.490, maximum-scale=0.490" />');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 		window.scrollTo(0, 0);//hide url bar mobiles //no funciona al 100% en android
 	}
 	else if(isiPod > -1) {
 		//alert('ipod');
-		$("head").append('<meta name="viewport" content="user-scalable=yes, initial-scale=0.490, maximum-scale=0.490" />');
+		//$("head").append('<meta name="viewport" content="user-scalable=yes, initial-scale=0.490, maximum-scale=0.490" />');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 		window.scrollTo(0, 0);//hide url bar mobiles //no funciona al 100% en android
 	}
@@ -235,7 +236,7 @@ $(document).ready(function() {
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
-		$("head").append('<meta name="viewport" content="height=600px, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />');
+		//$("head").append('<meta name="viewport" content="height=600px, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />');
 		$("#logosBlock").append('<a href="https://www.bac.net/bacsanjose/" target="_blank" class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></a> <a href="http://www.gruponacion.co.cr" target="_blank" class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></a>');
 		window.scrollTo(0, 0);//hide url bar mobiles //no funciona al 100% en android
 	}
