--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;">
+<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, height=600, width=900, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=1200, target-densityDpi=device-dpi" />-->
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width, target-densityDpi=device-dpi" />
-<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, height=600, width=900, target-densityDpi=device-dpi" />-->
-<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=1200, target-densityDpi=device-dpi" />
 
 
 <script language="javascript" type="text/javascript">
