--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=1200, target-densityDpi=device-dpi" />
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width, target-densityDpi=device-dpi" />
 <meta name="viewport" content="width=device-width, target-densityDpi=device-dpi" />
-<meta name="viewport" content="width=device-width" />-->
-<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, height=device-height, width=device-width" />
+<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, height=device-height, width=device-width" />-->
+<meta name="viewport" content="width=1200" />
+
 
 <script language="javascript" type="text/javascript">
 //alert(navigator.platform);
