--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta name="viewport" content="width=device-width, target-densityDpi=device-dpi" />
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, height=device-height, width=device-width" />-->
-<meta name="viewport" content="initial-scale=.5, maximum-scale=.5, height=device-height, width=device-width" />
+<meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, height=device-height, width=device-width" />
 
 
 <script language="javascript" type="text/javascript">
