--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="viewport" content="width=2000, target-densityDpi=device-dpi" />
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, height=device-height, width=device-width, target-densityDpi=high-dpi" />
 <meta name="viewport" content="initial-scale=.5, maximum-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width, target-densityDpi=device-dpi" />-->
-<meta name="viewport" content="initial-scale=.5, maximum-scale=1.0, minimum-scale=.5, height=device-height, width=device-width, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=no, height=device-height, width=device-width, target-densityDpi=device-dpi" />
 
 
 <script language="javascript" type="text/javascript">
