--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <meta name="viewport" content="width=2000, target-densityDpi=device-dpi" />
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, height=device-height, width=device-width, target-densityDpi=high-dpi" />
 <meta name="viewport" content="initial-scale=.5, maximum-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width, target-densityDpi=device-dpi" />
-<meta name="viewport" content="initial-scale=0.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />-->
-<meta name="viewport" content="initial-scale=.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=0.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />-->
+<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
 <!--probar initial-scale 90% | sin max min-->
 
 <script language="javascript" type="text/javascript">
