--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function auIntro() {
 		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.mp3');
 	}
 	else if (android > -1) {
-		//alert('android 16');
+		alert('android 17');
 		//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 		audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/intro.ogg');
 	}
