--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <meta name="viewport" content="initial-scale=.5, maximum-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width, target-densityDpi=device-dpi" />
 <meta name="viewport" content="initial-scale=0.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
 <meta name="viewport" content="initial-scale=.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
-<meta name="viewport" content="initial-scale=.85, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />-->
-<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=.85, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />-->
 <!--probar initial-scale 90% | sin max min-->
 
 <script language="javascript" type="text/javascript">
@@ -246,12 +246,55 @@ $(document).ready(function() {
 	}
 	else if (android > -1) {
 		//alert('android 18');
-		alert( 'Your screen resolution is ' + screen.width + 'x' + screen.height );
+		//alert( 'Your screen resolution is ' + screen.width + 'x' + screen.height );
 		//$("head").append('<meta name="viewport" content="width=1200px, target-densitydpi=device-dpi" />');
 		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi" />');
 		//$("head").append('<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />');
-		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
+		
+		/*if (screen.width == 800) {
+			
+			$("head").append('<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else */
+		
+		if ( screen.width < 1000 ) {
+			
+			alert('mayor que 1000');
+			$("head").append('<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 1000) && (screen.width >= 900) ) {
+			
+			$("head").append('<meta name="viewport" content="initial-scale=.9, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 900) && (screen.width >= 800) ) {
+			
+			$("head").append('<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 800) && (screen.width >= 700) ) {
+			
+			$("head").append('<meta name="viewport" content="initial-scale=.7, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 700) && (screen.width >= 600) ) {
+		
+			$("head").append('<meta name="viewport" content="initial-scale=.6, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 600) && (screen.width >= 500) ) {
+		
+			$("head").append('<meta name="viewport" content="initial-scale=.5, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 500) && (screen.width >= 400) ) {
+		
+			$("head").append('<meta name="viewport" content="initial-scale=.4, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 400) && (screen.width >= 300) ) {
+		
+			$("head").append('<meta name="viewport" content="initial-scale=.3, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		}//if screen.width
+		
+		alert('screen width' + screen.width);
+		
 	}
 	else {
 		//$("head").append('<meta name="viewport" content="height=600px, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />');
