--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ $(document).ready(function() {
 		
 		} else */
 		
-		if ( screen.width < 1000 ) {
+		if ( screen.width > 1000 ) {
 			
 			alert('mayor que 1000');
 			$("head").append('<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
