--- a/index.html
+++ b/index.html
@@ -252,15 +252,16 @@ $(document).ready(function() {
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi" />');
 		//$("head").append('<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />');
 		
-		/*if (screen.width == 800) {
-			
-			$("head").append('<meta name="viewport" content="initial-scale=.8, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 		
-		} else */
-		
-		if ( screen.width > 1000 ) {
+		if ( screen.width > 1100 ) {
 			
-			alert('mayor que 1000');
+			alert('mayor que 1100');
+			$("head").append('<meta name="viewport" content="initial-scale=1.1, maximum-scale=1.1, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
+		
+		} else if ( (screen.width < 1100) && (screen.width >= 1000) ) {
+			
+			//alert('mayor que 1000');
 			$("head").append('<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=.5, user-scalable=yes, height=device-height, width=device-width, target-densityDpi=device-dpi" />');
 		
 		} else if ( (screen.width < 1000) && (screen.width >= 900) ) {
@@ -293,7 +294,7 @@ $(document).ready(function() {
 		
 		}//if screen.width
 		
-		alert('screen width' + screen.width);
+		//alert('screen width' + screen.width);
 		
 	}
 	else {
