--- a/cuento.html
+++ b/cuento.html
@@ -49,43 +49,6 @@ var android 	   = navigator.userAgent.toLowerCase().indexOf("android");
 
 <script language="javascript" type="text/javascript">
 
-/*function aubtn() {
-	var audioElement = document.createElement('audio');
-	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
-	
-	//iOS y Safari no reconocen .ogg
-	if(isiPhone > -1) {
-		//alert('iphone 22');
-		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	}
-	else if(isiPod > -1) {
-		//alert('ipod');
-		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	}
-	else if(isiPad > -1) {
-		//alert('ipad');
-		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	}
-	else if(isSafari > -1) {
-		//alert('ipad');
-		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	}
-	else if (android > -1) {
-		//alert('android 16');
-		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
-	}
-	else {
-		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
-	}
-	//fin iOS y Safari no reconocen .ogg
-	
-	audioElement.play();
-}*/
-
-/*audioElement.setAttribute('autoplay', 'autoplay');
-$.get();*/
-
 var audioElement = document.createElement('audio');
 
 function playAudio() {
@@ -126,7 +89,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -156,7 +119,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -186,7 +149,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -216,7 +179,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -246,7 +209,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -276,7 +239,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_fas/.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
@@ -307,7 +270,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.ogg');
@@ -337,7 +300,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
@@ -397,7 +360,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
@@ -427,7 +390,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
@@ -457,7 +420,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
@@ -487,7 +450,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_FLOR.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.ogg');
@@ -517,7 +480,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
@@ -547,7 +510,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
@@ -577,7 +540,7 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
+				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
