--- a/cuento.html
+++ b/cuento.html
@@ -269,7 +269,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.ogg');
@@ -299,7 +300,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
@@ -329,7 +331,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg');
+				//audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg');
@@ -359,7 +362,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
@@ -389,7 +393,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
@@ -419,7 +424,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
@@ -449,7 +455,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_FLOR.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_FLOR.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_FLOR.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.ogg');
@@ -479,7 +486,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
@@ -509,7 +517,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
@@ -539,7 +548,8 @@ function playAudio() {
 			}
 			else if (android > -1) {
 				//alert('android 16');
-				audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
+				//audioElement.setAttribute('src', 'http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
+				$("playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg"/>');
 			}
 			else {
 				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
@@ -1023,14 +1033,12 @@ $(document).ready(function() {
         </div><!--/#dialog4-->
         
         <div id="dialog5" class="window">
-        	<a href="javascript:void(0)" class="close" id="btCloseCredits"></a>
-        	<!--<div id="creditosD">-->
-        		<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;">
-                    <source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3"/>
-                    <source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg"/>
-                    Su navegador no soporta audio para HTML5.
-                </audio>
-            <!--</div>/#creditosD-->
+			<a href="javascript:void(0)" class="close" id="btCloseCredits"></a>
+			<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
+				<!--<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3"/>
+				<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg"/>-->
+				Su navegador no soporta audio HTML5.
+			</audio>
         </div><!--/#dialog4-->
 		
 		<!-- Mask to cover the whole screen -->
