--- a/cuento.html
+++ b/cuento.html
@@ -1033,7 +1033,7 @@ $(document).ready(function() {
         </div><!--/#dialog4-->
         
         <div id="dialog5" class="window">
-			<a href="javascript:void(0)" class="close" id="btCloseCredits"></a>
+			<a href="javascript:void(0)" class="close" id="btCloseCredits" onclick="document.getElementById('playerCuento').pause();"></a>
 			<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
 				<!--<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3"/>
 				<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg"/>-->
