--- a/cuento.html
+++ b/cuento.html
@@ -1034,9 +1034,10 @@ $(document).ready(function() {
         
         <div id="dialog5" class="window">
 			<a href="javascript:void(0)" class="close" id="btCloseCredits" onclick="document.getElementById('playerCuento').pause();"></a>
-			<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
+			<!--<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
 				Su navegador no soporta audio HTML5.
-			</audio>
+			</audio>-->
+            <video src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg" onclick="this.play();"></video>
         </div><!--/#dialog4-->
 		
 		<!-- Mask to cover the whole screen -->
