--- a/cuento.html
+++ b/cuento.html
@@ -1037,7 +1037,7 @@ $(document).ready(function() {
 			<!--<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
 				Su navegador no soporta audio HTML5.
 			</audio>-->
-            <video src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg" onclick="this.play();"></video>
+            <video src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3" onclick="this.play();"></video>
         </div><!--/#dialog4-->
 		
 		<!-- Mask to cover the whole screen -->
