--- a/cuento.html
+++ b/cuento.html
@@ -1036,8 +1036,13 @@ $(document).ready(function() {
 			<a href="javascript:void(0)" class="close" id="btCloseCredits" onclick="document.getElementById('playerCuento').pause();"></a>
 			<!--<audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento">
 				Su navegador no soporta audio HTML5.
-			</audio>-->
-            <video src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3" onclick="this.play();"></video>
+			</audio>
+            <video src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3" onclick="this.play();"></video>-->
+            
+            <audio controls="true" align="center" style="width:400px; margin:30px auto 0px auto;" id="playerCuento2">
+            	<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg"/>
+				Su navegador no soporta audio HTML5.
+			</audio>
         </div><!--/#dialog4-->
 		
 		<!-- Mask to cover the whole screen -->
